src/argocd/bootstrap-resources/longhorn/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.ryanb.tv`)
      kind: Rule
      services:
        - name: longhorn-frontend
          kind: Service
          namespace: longhorn-system
          port: http
  tls: {}
